--- a/src/View/fxml/AdminView.fxml
+++ b/src/View/fxml/AdminView.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="791.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.View.employee.view.MainViewController">
+<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.admin.AdminController">
    <top>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="465.0" prefWidth="787.0" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="465.0" prefWidth="787.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
             <TabPane layoutX="4.0" layoutY="2.0" prefHeight="348.0" prefWidth="783.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
               <tabs>
@@ -18,30 +19,45 @@
                   <Tab text="Used Items" />
               </tabs>
             </TabPane>
-            <Button layoutX="24.0" layoutY="358.0" mnemonicParsing="false" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
+            <Button fx:id="btnCreateEmployee" layoutX="24.0" layoutY="358.0" mnemonicParsing="false" onAction="#btnCreateEmployeeEvent" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="24.0" layoutY="399.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
+            <Button fx:id="btnCreateItem" layoutX="24.0" layoutY="399.0" mnemonicParsing="false" onAction="#btnCreateItemEvent" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Button layoutX="192.0" layoutY="358.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Update" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Button layoutX="192.0" layoutY="399.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="692.0" layoutY="399.0" mnemonicParsing="false" style="-fx-background-color: #8CD0BB;" text="Log out" textFill="WHITE">
+            <Button fx:id="btnLogOut" layoutX="692.0" layoutY="399.0" mnemonicParsing="false" onAction="#btnLogOut" style="-fx-background-color: #8CD0BB;" text="Log out" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <TextField layoutX="312.0" layoutY="360.0" promptText="Search" />
          </children>
