--- a/src/SourceCode/View/fxml/CreateItem.fxml
+++ b/src/SourceCode/View/fxml/CreateItem.fxml
@@ -6,37 +6,36 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.admin.CreateEmployeeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateItemController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="117.0" layoutY="84.0" style="-fx-text-fill: #8CD0BB;" text="Employee barcode">
+            <Label layoutX="117.0" layoutY="84.0" style="-fx-text-fill: #8CD0BB;" text="Item barcode">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="117.0" layoutY="144.0" style="-fx-text-fill: #8CD0BB;" text="Employee number">
+            <Label layoutX="117.0" layoutY="144.0" style="-fx-text-fill: #8CD0BB;" text="Item number">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="117.0" layoutY="202.0" style="-fx-text-fill: #8CD0BB;" text="Emloyee name">
+            <Label layoutX="117.0" layoutY="202.0" style="-fx-text-fill: #8CD0BB;" text="Item name">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="119.0" layoutY="257.0" style="-fx-text-fill: #8CD0BB;" text="Phone number">
+            <Label layoutX="119.0" layoutY="257.0" style="-fx-text-fill: #8CD0BB;" text="Item Category">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="88.0" layoutY="8.0" style="-fx-text-fill: #8CD0BB;" text="Create Employee" textFill="WHITE">
+            <Label layoutX="122.0" layoutY="8.0" style="-fx-text-fill: #8CD0BB;" text="Create Item" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="24.0" />
                </font>
             </Label>
             <TextField layoutX="117.0" layoutY="104.0" promptText="barcode.." />
-            <TextField layoutX="117.0" layoutY="277.0" promptText="phone.." />
             <TextField layoutX="117.0" layoutY="164.0" promptText="number.." />
             <TextField layoutX="117.0" layoutY="219.0" promptText="name.." />
             <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#closeButtonAction" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
@@ -55,6 +54,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <ComboBox layoutX="118.0" layoutY="277.0" prefHeight="27.0" prefWidth="166.0" promptText="category.." />
          </children>
       </AnchorPane>
    </center>
