--- a/src/SourceCode/View/fxml/ReturnView.fxml
+++ b/src/SourceCode/View/fxml/ReturnView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.*?>
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -8,20 +9,19 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.user.TakeItemController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.ReturnItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <HBox>
                <children>
-                  <TextField fx:id="tfEmployeeBarcode" pickOnBounds="false" promptText="Employee barcode..." stylesheets="@../CSS/takeCSS.css" />
                   <Region prefHeight="27.0" prefWidth="282.0" />
                   <Label text="Label" visible="false" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemBarcode" pickOnBounds="false" promptText="Item barcode..." stylesheets="@../CSS/takeCSS.css" />
+                  <TextField fx:id="tfItemBarcode" promptText="Item barcode..." stylesheets="@../CSS/returnCSS.css" />
                </children>
             </HBox>
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
@@ -42,15 +42,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
-                  <Button fx:id="btnDelete" layoutX="484.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Black" size="13.0" />
-                     </font>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Region prefHeight="27.0" prefWidth="112.0" />
+                  <Region prefHeight="30.0" prefWidth="237.0" />
                   <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
@@ -68,7 +60,7 @@
       <HBox BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="54.0" prefWidth="220.0" />
-            <Label prefHeight="54.0" prefWidth="261.0" style="-fx-text-fill: #8CD0BB;" text="Take Item" textAlignment="CENTER">
+            <Label prefHeight="54.0" prefWidth="261.0" style="-fx-text-fill: #8CD0BB;" text="Return Item" textAlignment="CENTER">
                <font>
                   <Font name="Arial Black" size="36.0" />
                </font>
@@ -82,7 +74,4 @@
          </children>
       </HBox>
    </top>
-   <cursor>
-      <Cursor fx:constant="DEFAULT" />
-   </cursor>
 </BorderPane>
