--- a/src/SourceCode/View/fxml/TakeItem.fxml
+++ b/src/SourceCode/View/fxml/TakeItem.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.*?>
-<?import java.net.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -10,28 +8,25 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" stylesheets="@../search/searchCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.user.SearchController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.user.TakeItemController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemNumber" pickOnBounds="false" promptText="Item number.." stylesheets="@../CSS/searchCSS.css" />
+                  <TextField fx:id="tfEmployeeBarcode" pickOnBounds="false" promptText="Employee barcode..." stylesheets="@../CSS/takeCSS.css" />
                   <Region prefHeight="27.0" prefWidth="282.0" />
-                  <Label fx:id="employeeBarcodeLabel" text="Label" visible="false" />
+                  <Label text="Label" visible="false" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" onShowing="#setData" prefHeight="27.0" prefWidth="167.0" promptText="Category" />
+                  <TextField fx:id="tfItemBarcode" pickOnBounds="false" promptText="Item barcode..." stylesheets="@../CSS/takeCSS.css" />
                </children>
             </HBox>
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="itemColumn" />
-                 <TableColumn prefWidth="75.0" text="numberColumn" />
-                 <TableColumn prefWidth="75.0" text="nameColumn" />
-                  <TableColumn prefWidth="75.0" style="-fx-text-fill: #ffffff; -fx-background-color: #8CD0BB; " text="Column X" />
+                <TableColumn prefWidth="75.0" text="Items" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -47,8 +42,16 @@
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
-                  <Region prefHeight="30.0" prefWidth="238.0" />
-                  <Button fx:id="btnSearch" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Search" textFill="WHITE">
+                  <Button fx:id="btnDelete" layoutX="484.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Delete" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Black" size="13.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Region prefHeight="27.0" prefWidth="112.0" />
+                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
@@ -64,8 +67,8 @@
    <top>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Region prefHeight="54.0" prefWidth="204.0" />
-            <Label alignment="CENTER" prefHeight="54.0" prefWidth="233.0" style="-fx-text-fill: #8CD0BB;" text="Search" textAlignment="CENTER">
+            <Region prefHeight="54.0" prefWidth="220.0" />
+            <Label prefHeight="54.0" prefWidth="261.0" style="-fx-text-fill: #8CD0BB;" text="Take Item" textAlignment="CENTER">
                <font>
                   <Font name="Arial Black" size="36.0" />
                </font>
@@ -79,4 +82,7 @@
          </children>
       </HBox>
    </top>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
 </BorderPane>
