--- a/src/SourceCode/View/fxml/TakeItem.fxml
+++ b/src/SourceCode/View/fxml/TakeItem.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -21,18 +23,26 @@
             <HBox>
                <children>
                   <TextField fx:id="tfEmployeeBarcode" onAction="#checkEmployeeBarcode" pickOnBounds="false" promptText="Employee barcode..." stylesheets="@../CSS/takeCSS.css" />
-                  <Region prefHeight="27.0" prefWidth="282.0" />
-                  <Label text="Label" visible="false" />
+                  <Region prefHeight="27.0" prefWidth="32.0" />
+                  <ComboBox fx:id="placeCombo" opacity="0.76" prefHeight="27.0" prefWidth="234.0" promptText="Select placement of the item">
+                     <effect>
+                        <InnerShadow color="#a5ddca" />
+                     </effect>
+                  </ComboBox>
+                  <Region prefHeight="27.0" prefWidth="101.0" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemBarcode" pickOnBounds="false" promptText="Item barcode..." stylesheets="@../CSS/takeCSS.css" />
+                  <TextField fx:id="tfItemBarcode" onAction="#checkItemBarcode" pickOnBounds="false" promptText="Item barcode..." stylesheets="@../CSS/takeCSS.css" />
+                  <Region prefHeight="27.0" prefWidth="32.0" />
                </children>
             </HBox>
-            <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
+            <TableView fx:id="tableView" prefHeight="260.0" prefWidth="400.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Items" />
+                <TableColumn minWidth="-Infinity" prefWidth="152.0" text="Item number" />
+                  <TableColumn prefWidth="243.0" text="Item name" />
+                  <TableColumn prefWidth="75.0" text="Place" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -57,7 +67,7 @@
                      </cursor>
                   </Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
-                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
+                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmitAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
