--- a/src/SourceCode/View/fxml/ReturnView.fxml
+++ b/src/SourceCode/View/fxml/ReturnView.fxml
@@ -21,13 +21,10 @@
             </HBox>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemBarcode" promptText="Item barcode..." stylesheets="@../CSS/returnCSS.css" />
+                  <TextField fx:id="tfItemBarcode" onAction="#checkItemBarcode" promptText="Item barcode..." stylesheets="@../CSS/returnCSS.css" />
                </children>
             </HBox>
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="Items" />
-              </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
@@ -43,7 +40,7 @@
                      </cursor></Button>
                   <Region prefHeight="27.0" prefWidth="112.0" />
                   <Region prefHeight="30.0" prefWidth="237.0" />
-                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
+                  <Button fx:id="btnSubmit" layoutX="485.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnSubmitAction" prefHeight="27.0" prefWidth="125.0" style="-fx-background-color: #8CD0BB;" text="Submit" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="13.0" />
                      </font>
