--- a/src/SourceCode/View/fxml/AdminView.fxml
+++ b/src/SourceCode/View/fxml/AdminView.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.AdminController">
+<BorderPane fx:id="adminBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.AdminController">
    <top>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="465.0" prefWidth="787.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -19,7 +21,7 @@
                   <Tab text="Used Items" />
               </tabs>
             </TabPane>
-            <Button fx:id="btnCreateEmployee" layoutX="24.0" layoutY="358.0" mnemonicParsing="false" onAction="#btnCreateEmployeeEvent" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
+            <Button fx:id="btnCreateEmployee" layoutX="24.0" layoutY="358.0" mnemonicParsing="false" onAction="#btnCreateEmployee" style="-fx-background-color: #8CD0BB;" text="Create Employee" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -27,7 +29,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btnCreateItem" layoutX="24.0" layoutY="399.0" mnemonicParsing="false" onAction="#btnCreateItemEvent" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
+            <Button fx:id="btnCreateItem" layoutX="24.0" layoutY="399.0" mnemonicParsing="false" onAction="#btnCreateItem" prefHeight="30.0" prefWidth="139.0" style="-fx-background-color: #8CD0BB;" text="Create Item" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
