--- a/src/SourceCode/View/fxml/CreateEmployee.fxml
+++ b/src/SourceCode/View/fxml/CreateEmployee.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateEmployeeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateEmployeeController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -35,11 +37,11 @@
                   <Font name="Arial Black" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="117.0" layoutY="104.0" promptText="barcode.." />
-            <TextField layoutX="117.0" layoutY="277.0" promptText="phone.." />
-            <TextField layoutX="117.0" layoutY="164.0" promptText="number.." />
-            <TextField layoutX="117.0" layoutY="219.0" promptText="name.." />
-            <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#closeButtonAction" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
+            <TextField fx:id="tfEmployeeBarcode" layoutX="117.0" layoutY="104.0" promptText="barcode.." />
+            <TextField fx:id="tfPhoneNumber" layoutX="117.0" layoutY="277.0" promptText="phone.." />
+            <TextField fx:id="tfEmployeeNo" layoutX="117.0" layoutY="164.0" promptText="number.." />
+            <TextField fx:id="tfEmployeeName" layoutX="117.0" layoutY="219.0" promptText="name.." />
+            <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnCancel" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
@@ -47,7 +49,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="214.0" layoutY="329.0" mnemonicParsing="false" style="-fx-background-color: #8CD0BB;" text="  Save  " textFill="WHITE">
+            <Button fx:id="btnSubmit" layoutX="214.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnSubmit" style="-fx-background-color: #8CD0BB;" text="  Save  " textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font>
