--- a/src/SourceCode/View/fxml/SearchView.fxml
+++ b/src/SourceCode/View/fxml/SearchView.fxml
@@ -16,23 +16,16 @@
          <children>
             <HBox>
                <children>
-                  <TextField fx:id="tfItemNumber" pickOnBounds="false" promptText="Item number.." stylesheets="@../CSS/searchCSS.css" />
+                  <TextField fx:id="tfItemNumber" onAction="#checkItemBarcode" pickOnBounds="false" promptText="Item number.." stylesheets="@../CSS/searchCSS.css" />
                   <Region prefHeight="27.0" prefWidth="282.0" />
-                  <Label fx:id="employeeBarcodeLabel" text="Label" visible="false" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" onShowing="#setData" prefHeight="27.0" prefWidth="167.0" promptText="Category" />
+                  <ComboBox fx:id="comboBox" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="27.0" prefWidth="167.0" promptText="Category" />
                </children>
             </HBox>
             <TableView fx:id="tableView" prefHeight="260.0" prefWidth="600.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="itemColumn" />
-                 <TableColumn prefWidth="75.0" text="numberColumn" />
-                 <TableColumn prefWidth="75.0" text="nameColumn" />
-                  <TableColumn prefWidth="75.0" style="-fx-text-fill: #ffffff; -fx-background-color: #8CD0BB; " text="Column X" />
-              </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
