--- a/src/SourceCode/View/fxml/CreateEmployee.fxml
+++ b/src/SourceCode/View/fxml/CreateEmployee.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateEmployeeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.admin.CreateEmployeeController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
@@ -37,10 +42,10 @@
                   <Font name="Arial Black" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="tfEmployeeBarcode" layoutX="117.0" layoutY="104.0" promptText="barcode.." />
-            <TextField fx:id="tfPhoneNumber" layoutX="117.0" layoutY="277.0" promptText="phone.." />
-            <TextField fx:id="tfEmployeeNo" layoutX="117.0" layoutY="164.0" promptText="number.." />
-            <TextField fx:id="tfEmployeeName" layoutX="117.0" layoutY="219.0" promptText="name.." />
+            <TextField fx:id="tfEmployeeBarcode" layoutX="117.0" layoutY="104.0" onAction="#checkEmployeeBarcode" promptText="barcode.." />
+            <TextField fx:id="tfPhoneNumber" layoutX="117.0" layoutY="277.0" onAction="#checkEmployeePhone" promptText="phone.." />
+            <TextField fx:id="tfEmployeeNo" layoutX="117.0" layoutY="164.0" onAction="#checkEmployeeNumber" promptText="number.." />
+            <TextField fx:id="tfEmployeeName" layoutX="117.0" layoutY="219.0" onAction="#checkEmployeeName" promptText="name.." />
             <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnCancel" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="13.0" />
