--- a/src/SourceCode/View/fxml/UpdateEmployee.fxml
+++ b/src/SourceCode/View/fxml/UpdateEmployee.fxml
@@ -42,10 +42,10 @@
                         <Font name="Arial Black" size="24.0" />
                     </font>
                 </Label>
-                <TextField fx:id="tfEmployeeBarcode" layoutX="117.0" layoutY="104.0" promptText="barcode.." />
-                <TextField fx:id="tfPhoneNumber" layoutX="117.0" layoutY="277.0" promptText="phone.." />
-                <TextField fx:id="tfEmployeeNo" layoutX="117.0" layoutY="164.0" promptText="number.." />
-                <TextField fx:id="tfEmployeeName" layoutX="117.0" layoutY="219.0" promptText="name.." />
+                <TextField fx:id="tfEmployeeBarcode" layoutX="117.0" layoutY="104.0" onAction="#checkEmployeeBarcode" promptText="barcode.." />
+                <TextField fx:id="tfPhoneNumber" layoutX="117.0" layoutY="277.0" onAction="#checkEmployeePhone" promptText="phone.." />
+                <TextField fx:id="tfEmployeeNo" layoutX="117.0" layoutY="164.0" onAction="#checkEmployeeNumber" promptText="number.." />
+                <TextField fx:id="tfEmployeeName" layoutX="117.0" layoutY="219.0" onAction="#checkEmployeeName" promptText="name.." />
                 <Button fx:id="btnCancel" layoutX="117.0" layoutY="329.0" mnemonicParsing="false" onAction="#btnCancel" style="-fx-background-color: #8CD0BB;" text="Cancel" textFill="WHITE">
                     <font>
                         <Font name="Arial Black" size="13.0" />
