--- a/src/SourceCode/View/fxml/AdminView.fxml
+++ b/src/SourceCode/View/fxml/AdminView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.effect.*?>
 <?import java.lang.*?>
@@ -123,7 +124,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <TextField fx:id="tfSearch" alignment="CENTER" layoutX="312.0" layoutY="360.0" onAction="#searchTfAction" promptText="Search" />
+            <TextField fx:id="tfSearch" layoutX="312.0" layoutY="366.0" onAction="#searchTfAction" promptText="               Search" />
             <Button fx:id="btnRefresh" layoutX="701.0" layoutY="364.0" mnemonicParsing="false" onAction="#btnRefreshAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Refresh" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
