--- a/src/SourceCode/View/fxml/Consumables.fxml
+++ b/src/SourceCode/View/fxml/Consumables.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.image.*?>
@@ -22,7 +23,7 @@
             </HBox>
                 <HBox>
                     <children>
-                        <TextField fx:id="tfItemBarcode" onAction="#checkItemBarcode" promptText="Item barcode..." stylesheets="@../CSS/returnCSS.css" />
+                        <TextField fx:id="tfItemBarcode" maxHeight="27.0" maxWidth="167.0" minHeight="27.0" minWidth="167.0" onAction="#checkItemBarcode" prefHeight="27.0" prefWidth="167.0" promptText="Item barcode..." stylesheets="@../CSS/returnCSS.css" />
                         <Region prefHeight="27.0" prefWidth="282.0" />
                         <Label text="Label" visible="false" />
                     </children>
@@ -88,6 +89,9 @@
                     <image>
                         <Image url="@../../../Image/Rac3.png" />
                     </image>
+               <HBox.margin>
+                  <Insets top="-6.0" />
+               </HBox.margin>
                 </ImageView>
             </children>
         </HBox>
