--- a/src/SourceCode/View/fxml/MainView.fxml
+++ b/src/SourceCode/View/fxml/MainView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.web.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
@@ -12,33 +13,6 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #808080;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SourceCode.Controller.main.MainViewController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-            <Menu fx:id="menuAdmin" mnemonicParsing="false" onAction="#goAdminView" text="Admin">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Admin Login" />
-              </items>
-            </Menu>
-          <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#goHome" text="Home">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Go Home" />
-            </items>
-          </Menu>
-          <Menu fx:id="menuTake" mnemonicParsing="false" onAction="#goTakeItem" text="Take">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#goTakeItem" text="Take Item" />
-            </items>
-          </Menu>
-          <Menu fx:id="menuReturn" mnemonicParsing="false" onAction="#goReturnItem" text="Return">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Return Item" />
-               </items>
-            </Menu>
-            <Menu fx:id="menuSearch" mnemonicParsing="false" onAction="#goSearch" text="Search">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Search" />
-              </items>
-            </Menu>
-        </menus>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -47,21 +21,32 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER_RIGHT" prefHeight="51.0" prefWidth="610.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="74.0" prefWidth="600.0">
                <children>
+                  <Button fx:id="btnAdmin" mnemonicParsing="false" onAction="#goAdminView" style="-fx-background-color: #8CD0BB;" text="Admin" textFill="WHITE">
+                     <HBox.margin>
+                        <Insets right="485.0" top="-32.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                   <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../Image/Rac3.png" />
                      </image>
                      <HBox.margin>
-                        <Insets right="15.0" top="15.0" />
+                        <Insets right="15.0" top="-8.0" />
                      </HBox.margin>
                   </ImageView>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btTakeItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goTakeItem" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Take" textFill="WHITE">
+                  <Button fx:id="btnTakeItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goTakeItem" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Take" textFill="WHITE">
                      <font>
                         <Font name="Arial Black" size="25.0" />
                      </font>
@@ -76,7 +61,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btReturnItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goReturnItem" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Return" textFill="WHITE">
+                  <Button fx:id="btnReturnItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goReturnItem" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Return" textFill="WHITE">
                      <effect>
                         <DropShadow color="#383939" offsetX="2.0" offsetY="5.0" />
                      </effect>
@@ -91,7 +76,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btSearch" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goSearch" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Search" textFill="WHITE">
+                  <Button fx:id="btnSearch" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goSearch" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Search" textFill="WHITE">
                      <effect>
                         <DropShadow color="#383939" offsetX="2.0" offsetY="5.0" />
                      </effect>
@@ -106,7 +91,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btConsumables" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goConsumables" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Consumables" textFill="WHITE">
+                  <Button fx:id="btnConsumables" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goConsumables" prefHeight="56.0" prefWidth="197.0" style="-fx-background-color: #8CD0BB;" text="Consumables" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
