--- a/src/SourceCode/View/fxml/AdminView.fxml
+++ b/src/SourceCode/View/fxml/AdminView.fxml
@@ -61,12 +61,24 @@
                            </columnResizePolicy>
                         </TableView>
                      </content></Tab>
+                  <Tab fx:id="categoryTab" text="     Categories     ">
+                     <content>
+                        <TableView fx:id="categoryTableView" onMouseClicked="#itemTableViewAction" prefHeight="200.0" prefWidth="200.0">
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <columns>
+                              <TableColumn fx:id="categoryColumn" prefWidth="216.0" text="Category" />
+                           </columns>
+                        </TableView>
+                     </content>
+                  </Tab>
                   <Tab fx:id="borrowedItemTab" text="Borrowed items">
                      <content>
                         <TableView fx:id="borrowedItemTableView" prefHeight="200.0" prefWidth="200.0">
                           <columns>
                             <TableColumn fx:id="borrowedItemEmployeeNameColumn" prefWidth="195.0" text="Employee" />
-                              <TableColumn fx:id="borrowedItemCategoryColumn" prefWidth="75.0" text="Item category" />
+                              <TableColumn fx:id="borrowedItemCategoryColumn" prefWidth="75.0" text="Item itemCategory" />
                               <TableColumn fx:id="borrowedItemNumberColumn" prefWidth="75.0" text="Item number" />
                             <TableColumn fx:id="borrowedItemNameColumn" prefWidth="195.0" text="Item info" />
                               <TableColumn fx:id="borrowedItemTimeTakenColumn" prefWidth="195.0" text="Time taken" />
