--- a/src/SourceCode/View/fxml/AdminView.fxml
+++ b/src/SourceCode/View/fxml/AdminView.fxml
@@ -79,10 +79,11 @@
                           <columns>
                             <TableColumn fx:id="borrowedItemEmployeeNameColumn" prefWidth="195.0" text="Employee" />
                               <TableColumn fx:id="borrowedItemCategoryColumn" prefWidth="75.0" text="Item Category" />
-                              <TableColumn fx:id="borrowedItemNumberColumn" prefWidth="75.0" text="Item number" />
-                            <TableColumn fx:id="borrowedItemNameColumn" prefWidth="195.0" text="Item info" />
+                              <TableColumn fx:id="borrowedItemNumberColumn" minWidth="0.0" prefWidth="10.0" text="Item number" />
+                            <TableColumn fx:id="borrowedItemNameColumn" prefWidth="126.0" text="Item info" />
                               <TableColumn fx:id="borrowedItemTimeTakenColumn" prefWidth="195.0" text="Time taken" />
-                              <TableColumn fx:id="borrowedItemTimeReturnedColumn" prefWidth="194.0" text="Time returned" />
+                              <TableColumn fx:id="borrowedItemTimeReturnedColumn" prefWidth="148.0" text="Time returned" />
+                              <TableColumn fx:id="borrowedItemFunctionalColumn" maxWidth="3500.0" minWidth="0.0" prefWidth="10.0" text="Functional" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -146,7 +147,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <TextField fx:id="tfSearch" layoutX="312.0" layoutY="449.0" onAction="#searchTfAction" promptText="              Search" />
+            <TextField fx:id="tfSearch" layoutX="312.0" layoutY="449.0" maxHeight="30.0" maxWidth="167.0" minHeight="30.0" minWidth="167.0" onAction="#searchTfAction" prefHeight="30.0" prefWidth="167.0" promptText="              Search" />
             <Button fx:id="btnRefresh" layoutX="701.0" layoutY="447.0" mnemonicParsing="false" onAction="#btnRefreshAction" prefHeight="30.0" prefWidth="73.0" style="-fx-background-color: #8CD0BB;" text="Refresh" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -155,7 +156,7 @@
                   <Font name="Arial Black" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="btnCreateCategory" layoutX="312.0" layoutY="488.0" mnemonicParsing="false" onAction="#btnCreateCategoryAction" prefHeight="30.0" prefWidth="167.0" style="-fx-background-color: #8CD0BB;" text="Create Category" textFill="WHITE">
+            <Button fx:id="btnCreateCategory" layoutX="312.0" layoutY="488.0" maxHeight="30.0" maxWidth="167.0" minHeight="30.0" minWidth="167.0" mnemonicParsing="false" onAction="#btnCreateCategoryAction" prefHeight="30.0" prefWidth="167.0" style="-fx-background-color: #8CD0BB;" text="Create Category" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
